--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -11,18 +11,22 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:padding="16dp"
         android:elevation="4dp"
-        android:background="#FFFFFF">
+        android:background="#FFFFFF"
+
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="16dp"
+        android:paddingTop="27dp">
 
         <ImageButton
-            android:id="@+id/btnBackUserList"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_arrow_back"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:layout_marginEnd="16dp"
-            app:tint="#000000"/>
+        android:id="@+id/btnBackUserList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_arrow_back"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:layout_marginEnd="16dp"
+        app:tint="#000000"/>
 
         <TextView
             android:id="@+id/txtUserListTitle"
@@ -49,12 +53,14 @@
         android:layout_centerInParent="true"
         android:orientation="vertical"
         android:gravity="center"
-        android:visibility="gone"> <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_notifications"
-        app:tint="#DDDDDD"
-        android:layout_marginBottom="16dp"/>
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/ic_notifications"
+            app:tint="#DDDDDD"
+            android:layout_marginBottom="16dp"/>
 
         <TextView
             android:id="@+id/txtEmptyMessage"
