--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -19,15 +19,17 @@
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:paddingBottom="16dp"
-        android:paddingTop="40dp"> <ImageButton
-        android:id="@+id/btnBackChangePass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_arrow_back"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:layout_marginEnd="16dp"
-        app:tint="?android:attr/textColorPrimary"
-        android:contentDescription="Voltar" />
+        android:paddingTop="40dp">
+
+        <ImageButton
+            android:id="@+id/btnBackChangePass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_arrow_back"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:layout_marginEnd="16dp"
+            app:tint="?android:attr/textColorPrimary"
+            android:contentDescription="Voltar" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -93,5 +95,4 @@
             android:textColor="?attr/colorOnPrimary"/>
 
     </LinearLayout>
-
 </LinearLayout>
