--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:text="Bem-vindo de volta!"
             android:textSize="18sp"
-            android:textColor="?android:attr/textColorSecondaryInverse"
+            android:textColor="?android:attr/textColorSecondary"
             android:layout_marginBottom="48dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -97,7 +97,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Ainda não tens conta? "
-                android:textColor="?android:attr/textColorSecondaryInverse"/>
+                android:textColor="?android:attr/textColorSecondary"/>
             <TextView
                 android:id="@+id/textGoToRegister"
                 android:layout_width="wrap_content"
