--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:background="?android:attr/colorBackground">
 
     <LinearLayout
         android:id="@+id/headerLayout"
@@ -12,21 +12,21 @@
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:elevation="4dp"
-        android:background="#FFFFFF"
+        android:background="?android:attr/colorBackground"
 
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:paddingBottom="16dp"
-        android:paddingTop="27dp">
+        android:paddingTop="30dp">
 
         <ImageButton
-        android:id="@+id/btnBackUserList"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_arrow_back"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:layout_marginEnd="16dp"
-        app:tint="#000000"/>
+            android:id="@+id/btnBackUserList"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_arrow_back"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:layout_marginEnd="16dp"
+            app:tint="?android:attr/textColorPrimary"/>
 
         <TextView
             android:id="@+id/txtUserListTitle"
@@ -35,7 +35,7 @@
             android:text="Lista"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="#000000"/>
+            android:textColor="?android:attr/textColorPrimary"/>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -59,7 +59,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/ic_notifications"
-            app:tint="#DDDDDD"
+            app:tint="?android:attr/textColorSecondary"
             android:layout_marginBottom="16dp"/>
 
         <TextView
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:text="Nada para mostrar aqui."
             android:textSize="16sp"
-            android:textColor="#999999"/>
+            android:textColor="?android:attr/textColorSecondary"/>
     </LinearLayout>
 
 </RelativeLayout>
