--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:background="?android:attr/colorBackground">
 
     <RelativeLayout
         android:id="@+id/headerLayout"
@@ -14,6 +14,7 @@
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:paddingBottom="5dp"
+        android:paddingTop="30dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -25,7 +26,7 @@
             android:text="UniVerse"
             android:textSize="35sp"
             android:textStyle="bold"
-            android:textColor="#6200EE"
+            android:textColor="?attr/colorPrimary"
             android:layout_centerVertical="true"/>
 
         <FrameLayout
@@ -41,7 +42,7 @@
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="Notificações"
                 android:src="@drawable/ic_notifications"
-                app:tint="#6200EE"
+                app:tint="?attr/colorPrimary"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <View
@@ -62,13 +63,13 @@
         android:id="@+id/tabLayoutFeed"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
+        android:background="?android:attr/colorBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/headerLayout"
-        app:tabIndicatorColor="#6200EE"
-        app:tabSelectedTextColor="#6200EE"
-        app:tabTextColor="#757575"
+        app:tabIndicatorColor="?attr/colorPrimary"
+        app:tabSelectedTextColor="?attr/colorPrimary"
+        app:tabTextColor="?android:attr/textColorSecondary"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -96,8 +97,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
         android:src="@android:drawable/ic_input_add"
-        app:tint="@android:color/white"
-        app:backgroundTint="#6200EE"
+        app:tint="?attr/colorOnPrimary"
+        app:backgroundTint="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:contentDescription="Criar Post" />
